# claude-governor

./: .gitignore  .needle-predispatch-sha  CLAUDE.md  Cargo.toml  Makefile  README.md  install.sh  test_safe_mode_warnings.sh
config/: cgov.service  claude-governor.service  claude-token-collector.service  governor.yaml  promotions.json
deploy/: claude-polish-seeder.service  claude-polish-seeder.timer  polish-opus-agent.yaml
notes/: bf-14zl4.md  bf-18hwm.md  bf-19b7h.md  bf-1c2y5.md  bf-1cmca.md  bf-1de40.md  bf-1f6lx.md  bf-1fwer.md  bf-1gmgj.md  bf-1hga0.md  bf-1i11d.md  bf-1mn02.md  bf-1qx8n.md  bf-1xabf.md  bf-1y51s.md  bf-201io.md  bf-20g38.md  bf-21swe.md  bf-25yyy.md  bf-27ulv-resolution.md  bf-28oar.md  bf-2bxsv.md  bf-2c8i6.md  bf-2hclr.md  bf-2nsat.md  bf-2q36k.md  bf-2rzcs.md  bf-2uk3y.md  bf-302de.md  bf-341w8.md  bf-36zs9.md  bf-3a49h.md  bf-3j8nc.md  bf-3js6h.md  bf-3jshm.md  bf-3q9z2.md  bf-3qta5.md  bf-3s1q9.md  bf-3suxt.md  bf-3t7xa.md  (+54 more)
scratch/: pluck_filter_diagnosis.py  pluck_query_verification.py  test_pluck_baseline.py  test_pluck_config_diagnosis.py  test_pluck_exact_query.py  test_pluck_exact_query_with_logging.py  test_pluck_final_diagnosis.py  test_pluck_query.py  test_pluck_starvation_cause.py  test_pluck_workspace_path.py
scripts/: polish-seeder.sh  polish-targets.example.txt
src/: alerts.rs  burn_rate.rs  calibrator.rs  capacity_summary.rs  collector.rs  config.rs  db.rs  doctor.rs  governor.rs  lib.rs  main.rs  narrator.rs  poller.rs  pricing.rs  schedule.rs  simulator.rs  state.rs  status_display.rs  worker.rs
tests/: fixtures.rs  (+1 more)
(+11 files in other folders)
